--- a/LAB3.Rmd
+++ b/LAB3.Rmd
@@ -131,7 +131,7 @@ Your new insight should look something like this:
 
 6. Parameterize your new age-structured population!   
 
-    6a. For births, make new variables called *Birth rate, age 1* and *Birth rate, age 2*, representing the per-capita reproductive rate for age 1 and age 2, respectively. Draw links from these variables to *Births*, and set these variables at 1.3 and 1.6, respectively. Click on the equation editor for *Births* and set the equation appropriately (see questions below)   
+    6a. For births, make new variables called *Fecundity, age 1* and *Fecundity, age 2*, representing the per-capita reproductive rate for age 1 and age 2, respectively. Draw links from these variables to *Births*, and set these variables at 1.3 and 1.6, respectively. Click on the equation editor for *Births* and set the equation appropriately (see questions below)   
     
     6b. For the transitions, make new variables representing the per-capita transition rates, called *Transition rate, Age 0 to 1* and *Transition rate, Age 1 to 2*. Draw links to the appropriate flows, and set these rates at 0.45 and 0.35, respectively. NOTE: these transition rates could also be called "survival rates"                
     6c. For the mortality rates, note that all individuals in the *Age 0* stock must either transition to *Age 1* or die (mortality rates are 1 minus the corresponding transition rate). In addition, all individuals in the *Age 2* stock must die- there is no *Age 3* class! Now click on the equation editors for the mortality rates, and specify the mortality rates appropriately.              
