--- a/LAB4.Rmd
+++ b/LAB4.Rmd
@@ -264,11 +264,11 @@ NOTE: Gotelli uses the term 'age class 1' to refer to individuals in their first
 
 Return to the InsightMaker model you created in Lab 3 (exercise 3 -- that is, a basic age structured population model, without the carrying capacity component you implemented in Exercise 4 of Lab 3). Your model should look something like this:
 
-![](IM_lab3.jpg)
+![](IM_lab3.JPG)
 
 Make sure the parameters are at the original values specified in Exercise 3 of Lab 3 (before altering mortality rates as part of lab 3 question 3e). As a reminder, here they are again:
 
-- For recruitment, set *Birth rate, age 1* at 1.3 and *Birth rate, age 2* at 1.6.    
+- For fecundities, set *Fecundity, age 1* at 1.3 and *Fecundity, age 2* at 1.6.    
 - For transition rates, set *Transition rate, Age 0 to 1* at 0.45 and *Transition rate, Age 1 to 2* at 0.35. NOTE: these transition rates could also be called "survival rates"    
 - For the mortality rates, note that all individuals in the *Age 0* stock must either transition to *Age 1* or die (mortality rates are 1 minus the corresponding transition rate). In addition, all individuals in the *Age 2* stock must die- there is no *Age 3* class! 
 
