--- a/LECTURE11.Rmd
+++ b/LECTURE11.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Declining-population paradigm"
 author: "NRES 470/670"
-date: "Spring 2021"
+date: "Spring 2022"
 output:
   pdf_document:
     toc: yes
@@ -24,9 +24,9 @@ knitr::opts_chunk$set(echo = TRUE, cache = TRUE)
 
 The answer of course is that the intrinsic ability to grow under ideal conditions is not the whole story. Populations are stocks with inflows and outflows- and if mortalities exceed births *under present conditions* the population will decline until these unfavorable conditions are reversed. 
 
-In the "small-population paradigm" lecture, we discussed several **stochastic threats** to populations, including loss of genetic diversity (genetic drift), demographic stochasticity, catastrophic environmental events. These threats only really affect small populations. Large populations are mostly resilient to stochastic threats.
+In the "small-population paradigm" lecture, we discussed several **stochastic threats** to populations, including loss of genetic diversity (genetic drift), demographic stochasticity, and catastrophic environmental events. These threats only really affect small populations. *Large populations are mostly resilient to these stochastic threats.*
 
-Large populations can be threatened too though! Factors that threaten large populations are generally called **deterministic threats**! 
+Large populations can be threatened too though! Factors that threaten large populations are generally **deterministic** (not random/stochastic)! 
 
 The **declining population paradigm** focuses on the factors that make large populations small -- that is, it is the *study of those deterministic processes that cause population decline (that tip the balance and cause deaths to exceed births), and how these processes may be reversed through effective conservation management*. 
 
@@ -72,7 +72,7 @@ In this paper, Caughley coined the terms 'small population paradigm' and 'declin
 
 > Conservation biology has two threads: the small-population paradigm which deals with the effect of smallness on the persistence of a population, and the declining- population paradigm which deals with the cause of smallness and its cure.
 
-**Q**: Can you detect Caughley's bias in the above quote? 
+**Q**: Can you detect Caughley's opinion in the above quote? 
 
 **Q**: What do you think? Do you agree with Caughley? Take a moment to look over the paper and please comment on TopHat!
 
