--- a/LECTURE9.Rmd
+++ b/LECTURE9.Rmd
@@ -107,7 +107,7 @@ The most widely-used PVA software, [Vortex](https://www.cpsg.org/our-approach/sc
 
 ## Example: Aruba island rattlesnake
 
-The aruba island rattlesnake, or Cascabel (*Crotalus durissus unicolor*), is the top predator on the island of Aruba, and primarily consumes rodents. 
+The Aruba Island Rattlesnake, or Cascabel (*Crotalus durissus unicolor*), is the top predator on the island of Aruba, and primarily consumes rodents. 
 
 ![](aruba_rattlesnake1.jpg)
 
@@ -115,7 +115,7 @@ The Aruba island rattlesnake, as you might expect, occurs only on the island of 
 
 ![](aruba1.png)
 
-The Aruba rattlesnake is listed as *Critically Endangered* by IUCN (actually, it is no longer listed as of 2021 due to lack of information), and has several attributes that make it particularly susceptible to falling into the extinction vortex:
+The Aruba rattlesnake was listed as *Critically Endangered* by IUCN (it is no longer listed as of 2021 due to lack of information), and has several attributes that make it particularly susceptible to falling into the extinction vortex:
 
 See [Lab 5](LAB5.html) for the related MVP activity.  
 
@@ -126,7 +126,7 @@ See [Lab 5](LAB5.html) for the related MVP activity.
 
 
 
-[--go to next lecture--](LECTURE10.html)
+[--go to next lecture--](LECTURE11.html)
 
 
 
